--- a/RealEstate_Dapper_Api/appsettings.json
+++ b/RealEstate_Dapper_Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "connection": "Server=DESKTOP-PM4T7I5\\SQLEXPRESS;initial Catalog=DbDapperRealEstate;integrated Security=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
