create api and layout

--- a/RealEstate_Dapper_Api/appsettings.json
+++ b/RealEstate_Dapper_Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "connection": "Server=DESKTOP-PM4T7I5\\SQLEXPRESS;initial Catalog=DbDapperRealEstate;integrated Security=true"
+    "connection": "Server=DESKTOP-PM4T7I5\\SQLEXPRESS;initial Catalog=DbDapperRealEstate;integrated Security=true;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
